--- a/README
+++ b/README
@@ -14,7 +14,28 @@ Sublime Text 2 allows you to trigger an alias with the tab key. The following ex
 
 This snippet file is saved in the Packages folder in your system Library. The Packages contain subdirectories for each code type, allowing you to create snippets specific to XML, C# or other projects. 
 
-The above example uses the <scope> element to define that that trigger will only work on a file saved with the XML file suffix. This allows you to customise your libraries by language or even project, where a dummy file suffix for a text file might correspond to a scope definition to limit replacement triggers to that project alone. 
+/Users/davedri/Library/Application Support/Sublime Text 2/Packages/XML
+
+The above example uses the <scope> element to define that that trigger will only work on a file saved with the XML file suffix. This allows you to customise your libraries by language or even project, where a dummy file suffix for a text file might correspond to a scope definition to limit replacement triggers to that project alone.
+
+
+Known Issue:
+
+OS X hides the User level Library. You can show all hidden files by running the following string in a Terminal session.
+
+1. Launch Terminal.
+2. Type in the following command.
+defaults write com.apple.Finder AppleShowAllFiles true
+3. Relaunch Finder in either the Terminal or via the GUI.
+	3a: Terminal method - type the following:
+	killall Finder
+	3b: GUI method - Hold down the Control and Option keys and click on the Finder icon in the Dock. Select Relaunch.
+
+To reverse the process
+defaults write com.apple.Finder AppleShowAllFiles false
+
+
+Links: 
 
 Sublime Text 2
 Link: http://www.sublimetext.com/2
